_tables.css: ensure header font contrasts background

--- a/src/furo/assets/styles/content/_tables.sass
+++ b/src/furo/assets/styles/content/_tables.sass
@@ -14,6 +14,7 @@ table.docutils
 
   th
     background: var(--color-background-secondary)
+    color: var(--color-foreground-primary)
 
   td,
   th
